# lookout

./: .gitignore
client/: .gitignore  main.py
firmware/: CMakeLists.txt  Makefile  sdkconfig
firmware/main/: CMakeLists.txt  main.c
